Fix timeline z-index and width

--- a/app/javascript/app/components/country/country-timeline/country-timeline-styles.scss
+++ b/app/javascript/app/components/country/country-timeline/country-timeline-styles.scss
@@ -93,7 +93,7 @@
 
         .links {
           display: block;
-          min-width: 120px;
+          min-width: 220px;
           position: relative;
           overflow: auto;
           max-height: 140px;
