--- a/app/javascript/app/pages/country/country-styles.scss
+++ b/app/javascript/app/pages/country/country-styles.scss
@@ -7,8 +7,6 @@
   @include msGridColumns(10fr, 2fr);
 
   grid-template-columns: 10fr 2fr;
-  // Needed because of the timeline padding hack
-  z-index: 2;
 }
 
 .section {
